fix: chat date color chnaged to grey as it was not visible on white Bg.

--- a/ai-mmi-backup-2025-08-06/public/asset/css/web/common.css
+++ b/ai-mmi-backup-2025-08-06/public/asset/css/web/common.css
@@ -765,7 +765,7 @@ main.page-body .chat-area .box .show-message .chat-date {
 main.page-body .chat-area .box .show-message .chat-date span {
     display: inline-block;
     background: rgba(255, 255, 255, 0.1);
-    color: rgba(255, 255, 255, 0.7);
+    color: var(--neutral-500);
     font-size: 0.75rem;
     font-weight: 500;
     padding: var(--space-2) var(--space-4);
